ingress/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-deployment
 namespace: ingress-namespace
spec:
 selector:
   matchLabels:
     app: ingress
 replicas: 3
 template:
   metadata:
     labels:
       app: ingress
   spec:
     containers:
     - name: ingress-container
       image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
