ingress/00-clusterip_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-clip
 namespace: ingress-namespace
spec:
 type: ClusterIP
 selector:
   app: ingress
 ports:
 - protocol: TCP
   port: 80
   targetPort: 8080
