ingress/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
 namespace: ingress-namespace
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - host: hello-world.info
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: service-clip
               port:
                 number: 8080
